Change to use netty HttpHeaders instead of HeaderMap